Create Auction Page and Bid button
