# webapp/routes/web.php
@@ -30,3 +30,13 @@ Route::post('login', 'Auth\LoginController@login');
 Route::get('logout', 'Auth\LoginController@logout')->name('logout');
 Route::get('register', 'Auth\RegisterController@showRegistrationForm')->name('register');
 Route::post('register', 'Auth\RegisterController@register');
+
+// Auctions
+Route::get('auction/{id}', 'AuctionController@show');
+
+
+// Auctions
+Route::post('api/auction/{id}/bid', 'BidController@create');
+
+
+
